# navigation_goal

./: CMakeLists.txt  README.md
config/: cameras_topics_armadillo2.yaml  cameras_topics_trx.yaml  locations.yaml
include/: move_action_client.h  move_action_server.h  point.h
launch/: navigation_goal.launch
scripts/: image_snapshot_node.py
src/: move_action_client.cpp  move_action_server.cpp  move_client_node.cpp  move_server_node.cpp
